--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="mx.cns.al">
+    package="mx.cns.ing">
    <application
         android:label="CNS-ING"
         android:requestLegacyExternalStorage="true"
