--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,10 @@ dependencies:
   screen_loader: ^4.0.1
   ots: ^1.0.0
   shared_preferences: ^2.0.13
-  qr_code_scanner: ^0.7.0
+  qr_code_scanner:
+    git:
+      url: https://github.com/xeinebiu/qr_code_scanner.git
+      ref: fix_break_changes_platform
   flutter_launcher_icons: ^0.9.2
   select_form_field: ^2.2.0
   signature: ^5.0.0
